bootstrap/traefik/traefik-dashboard-login.yaml
# traefix-dashboard-login.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: traefik
spec:
  basicAuth:
    secret: traefik-auth
