bootstrap/traefik/services_traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: reclamation
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ahmedkacemstage.me`) && PathPrefix(`/reclamation`)
      services:
        - name: reclamation
          port: 80

  tls:
    secretName: default-certificate-secret
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: commercial
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ahmedkacemstage.me`) && PathPrefix(`/commercial`)
      services:
        - name: commercial
          port: 80
  tls:
    secretName: default-certificate-secret
