bootstrap/traefik/traefik_ingressroute.yaml

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.ahmedkacemstage.me`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      # Enable auth middleware
      middlewares:
        - name: auth
